day02-把需要安装的先进行安装一下

--- a/test.scss
+++ b/test.scss
@@ -2,9 +2,10 @@ $background-color:green;
 $width:100px;
 $height:100px;
 .test2 {
-  background: $background-color;
+  //background: $background-color;
   height: $height;
   width: $width;
+  background-image: url("./src/images/ss.jpg");
 }
 
 
